--- a/indexdark.html
+++ b/indexdark.html
@@ -126,7 +126,7 @@
                             </button>
                             <div class="card-star">
                                 <svg class="star-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" role="presentation"><path d="M12 20.1l5.82 3.682c1.066.675 2.37-.322 2.09-1.584l-1.543-6.926 5.146-4.667c.94-.85.435-2.465-.799-2.567l-6.773-.602L13.29.89a1.38 1.38 0 0 0-2.581 0l-2.65 6.53-6.774.602C.052 8.126-.453 9.74.486 10.59l5.147 4.666-1.542 6.926c-.28 1.262 1.023 2.26 2.09 1.585L12 20.099z"></path></svg>
-                                <p class="card-text pdB">7.4</p>
+                                <p class="card-text">7.4</p>
                             </div>
                             <p class="card-text long-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas neque est, consectetur at lectus quis, pharetra porttitor nulla.
                                  Nullam mattis est nisi, id efficitur nisi consectetur eget. Sed condimentum sed ipsum et faucibus.
@@ -137,7 +137,7 @@
                                     <button class="heart-button">
                                         <i class="fa fa-heart heart-icon"></i>
                                     </button>
-                                    <p class="card-text pdB">10 likes</p>
+                                    <p class="card-text">10 likes</p>
                                 </div>
                                 <button class="review-full-button">
                                     Ver crítica completa
@@ -155,7 +155,7 @@
                             </button>
                             <div class="card-star">
                                 <svg class="star-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" role="presentation"><path d="M12 20.1l5.82 3.682c1.066.675 2.37-.322 2.09-1.584l-1.543-6.926 5.146-4.667c.94-.85.435-2.465-.799-2.567l-6.773-.602L13.29.89a1.38 1.38 0 0 0-2.581 0l-2.65 6.53-6.774.602C.052 8.126-.453 9.74.486 10.59l5.147 4.666-1.542 6.926c-.28 1.262 1.023 2.26 2.09 1.585L12 20.099z"></path></svg>
-                                <p class="card-text pdB">9.2</p>
+                                <p class="card-text">9.2</p>
                             </div>
                             <p class="card-text long-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas neque est, consectetur at lectus quis, pharetra porttitor nulla.
                                  Nullam mattis est nisi, id efficitur nisi consectetur eget. Sed condimentum sed ipsum et faucibus.
@@ -166,7 +166,7 @@
                                     <button class="heart-button">
                                         <i class="fa fa-heart heart-icon"></i>
                                     </button>
-                                    <p class="card-text pdB">52 likes</p>
+                                    <p class="card-text">52 likes</p>
                                 </div>
                                 <button class="review-full-button">
                                     Ver crítica completa
