Create home and details folder

--- a/src/Home/index.html
+++ b/src/Home/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=0.6">
         <title>Your Reviews</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/homestyle.css">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
