Add movie details dark mode

--- a/src/Details/index.html
+++ b/src/Details/index.html
@@ -68,7 +68,7 @@
                 <div class="movie-title-more">
                     <h1 class="pdT">Sinopse</h1>
                     <div class="movie-sinopse">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        <p class="long-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                              Maecenas molestie mauris et metus aliquam placerat. Suspendisse felis lectus, ultrices quis vestibulum ut, rutrum a eros.
                               Suspendisse euismod accumsan scelerisque. Cras malesuada ipsum sed eros sodales, non malesuada magna facilisis.
                                Nullam quis elit fermentum, sodales quam pulvinar, tincidunt nunc. Vestibulum nec sagittis ligula. Quisque ac turpis ligula.
@@ -79,7 +79,7 @@
                 </div>
                 <div class="movie-title-more">
                     <h1 class="pdT">Elenco</h1>
-                    <ul class="movie-cast-list movie-sinopse">
+                    <ul class="movie-cast-list movie-sinopse long-text" >
                         <li>
                             <p class="movie-cast-text"><b class="bold">Ator 1</b> como Personagem 1</p>
                         </li>
@@ -157,7 +157,7 @@
                 <div class="movie-title-more">
                     <h1 class="pdT">Curiosidades</h1>
                     <div class="movie-sinopse">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec posuere blandit convallis. Curabitur in nulla odio.
+                        <p class="long-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec posuere blandit convallis. Curabitur in nulla odio.
                              Sed bibendum semper ligula mollis dapibus. Donec porta lectus a mauris pellentesque mattis nec placerat turpis.
                               Donec scelerisque tempus diam non dignissim. Suspendisse potenti. Nulla iaculis sapien eu augue lobortis sagittis.
                             Cras a vehicula quam. Maecenas eu maximus odio. Pellentesque feugiat nibh vel nulla blandit fringilla.
