--- a/src/Login/index.html
+++ b/src/Login/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=], initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/loginlight.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+    <title>Login</title>
 </head>
 <body>
     <main>
@@ -14,10 +16,10 @@
             <h1>Login</h1>
             <form id="form-login" method="POST">
                 <label for="user" class="labelInput">Usuário: </label>
-                <input class="logInputfields" type="text" name="user" minlength="3" required><br>
+                <input id="user" class="logInputfields" type="text" name="user" minlength="3" required><br>
                 <label for="password" class="labelInput">Password: </label>
-                <input class="logInputfields" type="password" name="password" minlength="6" required><br>
-                <input type="submit" value="Entrar" id="btn-login">
+                <input id="password" class="logInputfields" type="password" name="password" minlength="6" required><br>
+                <button type="submit" id="btn-login">Entrar</button>
             </form>
             <a href="cadastroUser.html">Cadastrar</a>
             <div id="cpr">
